# pcl_learning

./: .gitignore  readme.md
05sampleconsensus抽样一致性模块/3RANSAC平面拟合/: demo.cpp  plate2.pcd
06range-images深度图像/1从点云创建深度图/: CMakeLists.txt  range_image_creation.cpp
06range-images深度图像/2从深度图中提取边界/: CMakeLists.txt  range_image_border_extraction.cpp
13recognition识别/33D物体识别的假设检验/: CMakeLists.txt  c1.pcd  c2.pcd  c3.pcd
14registration配准/1使用迭代最近点算法(ICP)/: CMakeLists.txt  iterative_closest_point.cpp
14registration配准/2如何逐步匹配多幅点云/: 1.pcd  2.pcd  3.pcd  4.pcd  pairwise_incremental_registration.cpp
14registration配准/5刚性物体的鲁棒姿态估计/: alignment_prerejective.cpp  plate1.pcd  plate_temp_0.pcd
zz-pcl_1_42实例/1滤波/1.1 按照坐标信息过滤点云数据/: demo.cpp
zz-pcl_1_42实例/1滤波/1.2 体素化网格降采样/: demo.cpp
zz-pcl_1_42实例/1滤波/1.3根据表面法线，曲率变化去除噪点声/: CMakeLists.txt  demo.cpp  readme.md  temp3.pcd
zz-pcl_1_42实例/1滤波/1.4 点投影到平面，球体/: demo.cpp
zz-pcl_1_42实例/1滤波/1.6 邻近点个数滤除离散点/: demo.cpp
zz-pcl_1_42实例/2分割/1.10 区域增长细分/: demo.cpp  temp1.pcd
zz-pcl_1_42实例/2分割/1.12 基于最小剪切的细分/: demo.cpp
zz-pcl_1_42实例/2分割/1.13 条件欧几里得聚类/: demo.cpp
zz-pcl_1_42实例/2分割/1.14 基于法线的分割的差异/: demo.cpp
zz-pcl_1_42实例/2分割/1.15 讲点云聚类为supervoxels/: demo.cpp
zz-pcl_1_42实例/2分割/1.16 分割/: demo.cpp
zz-pcl_1_42实例/2分割/1.17 提取平面或球面的参数模型/: demo.cpp
zz-pcl_1_42实例/2分割/1.18 使用MLS曲面方法平滑数据/: demo.cpp
zz-pcl_1_42实例/2分割/1.19 为平面模型构建凹凸船体多边形/: CMakeLists.txt  berxelPoint3D_2.pcd  concave_hull_2d.cpp  convex_hull_2d.cpp  readme.md
zz-pcl_1_42实例/2分割/1.20 无序点云的快速三角部分/: berxelPoint3D_8.pcd  demo.cpp
zz-pcl_1_42实例/2分割/1.5 提取平面，曲面元素/: demo.cpp  (+2 more)
(+5 files in other folders)
